# dumpi-cortex

./: .gitignore  CMakeLists.txt  COPYRIGHT.txt  README.md
cmake/Modules/: FindCODES.cmake  FindDUMPI.cmake  FindROSS.cmake  FindTOPO.cmake
conf/: allocation.conf
include/: .colex-callbacks.h.swp
include/cortex/: callbacks.h  comm.h  common.h  constants.h  cortex-mpich.h  cortex-python.h  cortex.h  datatype.h  debug.h  default-callbacks.h  dragonfly.h  mpich-callbacks.h  mpich-constants.h  operation.h  placement.h  post.h  profile.h  python-callbacks.h  python-util.hpp  topology.h  util.h
include/cortex/dfly/: bcast_context.h  grt.h  rgt.h
lib/: CMakeLists.txt
src/: callbacks.c  comm.c  cortex-python.cpp  cortex.c  datatype.c  default-callbacks.c  mpich-callbacks.c  operation.c  placement.c  post.c  python-callbacks.c  topology.c
src/.deps/: cortex.Po
src/mpich/: mpi_allgather.c  mpi_allgatherv.c  mpi_allreduce.c  mpi_alltoallv.c  mpi_barrier.c  mpi_bcast.c  mpi_comm_create.c  mpi_comm_dup.c  mpi_comm_split.c  mpi_reduce.c
src/python/: generate.py  module.cpp  mpi_abort.cpp  mpi_accumulate.cpp  mpi_add_error_class.cpp  mpi_add_error_code.cpp  mpi_add_error_string.cpp  mpi_address.cpp  mpi_all.cpp  mpi_allgather.cpp  mpi_allgatherv.cpp  mpi_alloc_mem.cpp  mpi_allreduce.cpp  mpi_alltoall.cpp  mpi_alltoallv.cpp  mpi_alltoallw.cpp  mpi_attr_delete.cpp  mpi_attr_get.cpp  mpi_attr_put.cpp  mpi_barrier.cpp  mpi_bcast.cpp  mpi_bsend.cpp  mpi_bsend_init.cpp  mpi_buffer_attach.cpp  mpi_buffer_detach.cpp  mpi_cancel.cpp  mpi_cart_coords.cpp  mpi_cart_create.cpp  mpi_cart_get.cpp  mpi_cart_map.cpp  mpi_cart_rank.cpp  mpi_cart_shift.cpp  mpi_cart_sub.cpp  mpi_cartdim_get.cpp  mpi_close_port.cpp  mpi_comm_accept.cpp  mpi_comm_call_errhandler.cpp  mpi_comm_compare.cpp  mpi_comm_connect.cpp  mpi_comm_create.cpp  (+255 more)
src/translations/: mpi_allgather.c  mpi_allgatherv.c  mpi_allreduce.c  mpi_alltoallv.c  mpi_barrier.c  mpi_bcast.c  mpi_comm_create.c  mpi_comm_dup.c  mpi_comm_split.c  mpi_reduce.c
src/translations/dfly/: bcast.cpp
test/: CMakeLists.txt  MyBcastTranslator.py  MyGenerator.py  MyPythonClass.py  gen_python.c  read.c  read_mpich.c  read_python.c
